--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <name>cicd-demo-webapp Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://localhost:8080/cicd-demo-webapp</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
